[NF] add item rarity mechanic; generate items using rarity